--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -2,9 +2,8 @@
   <div class="header_container container">
     <nav>
       <ul class="header_list">
-        <li class="header_list--item"><a href="">About</a></li>
-        <li class="header_list--item"><a href="">Portfolio</a></li>
-        <li><a href=""></a></li>
+        <li class="header_list--item"><a href="">CV</a></li>
+        <li class="header_list--item"><a href="">Contact me</a></li>
       </ul>
     </nav>
   </div>
