--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,11 +1,18 @@
 <section>
   <div class="container">
-    <p >Hello, I'm Anna</p>
-    <h1 class="hero__title">I'm Full-Stack Developer </h1>
-    <p class="hero_text">I admire Java Script and like creating websites and applications</p>
+    <p>Hello, I'm Anna</p>
+    <h1 class="hero__title">I'm Full-Stack Developer</h1>
+    <p class="hero_text">
+      I admire Java Script and like creating websites and applications
+    </p>
     <ul>
       <li>
-        <a href="https://www.linkedin.com/in/volfmananna/" aria-label="Linkedin" target="_blank"
+        <a
+          href="https://www.linkedin.com/in/volfmananna/"
+          aria-label="Linkedin"
+          target="_blank"
+          rel="noopener noreferrer nofollow"
+          class="link"
           ><svg
             width="22"
             height="21"
@@ -36,6 +43,10 @@
       <li><a href=""></a></li>
       <li><a href=""></a></li>
     </ul>
-    <a href="" class="button">Portfolio</a>
+    <ul class="hero__links">
+      <li><a href="https://drive.google.com/file/d/1GUgIexvLlL9_-bziwE6M_NvoX0jSu4-5/view?usp=share_link" target="_blank"
+        rel="noopener noreferrer nofollow" class="button button--white">CV</a></li>
+      <li><a href="" class="button button--pink">Contact me</a></li>
+    </ul>
   </div>
 </section>
