--- a/src/sass/components/_button.scss
+++ b/src/sass/components/_button.scss
@@ -4,16 +4,34 @@
   justify-content: center;
   padding: 7px 15px;
   width: 100%;
-  max-width: 166px;
-  background-color:$button;
-  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+  min-width: 166px;
   border-radius: 10px;
   font-family: inherit;
-  color: $secondary;
   margin-top: 20px;
-  transition: background-color $cubic-bezier 0.5s;
-  &:hover {
+  transition: all $cubic-bezier 0.5s;
+  &--pink {
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+      1px 4px 6px rgba(0, 0, 0, 0.16);
+    color: $secondary;
+    background-color: $button;
+  }
+  &--pink:hover {
     background-color: #a29bfe;
     box-shadow: 4px 4px 40px 4px rgba(168, 168, 168, 0.25);
+  }
+
+  &--white {
+    color: $button;
+    border: 1px solid $button;
+    background: $secondary;
+    box-shadow: 4px 4px 40px 4px rgba(168, 168, 168, 0.25);
+  }
+
+  &--white:hover {
+    color: $button;
+    border: 1px solid $button;
+    background: $secondary;
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+      1px 4px 6px rgba(0, 0, 0, 0.16);
   }
 }
