--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,5 +1,5 @@
-<section>
-  <div class="container">
+<section class="hero">
+  <div class="hero__container container">
     <p>Hello, I'm Anna</p>
     <h1 class="hero__title">I'm Full-Stack Developer</h1>
     <p class="hero_text">
@@ -48,5 +48,29 @@
         rel="noopener noreferrer nofollow" class="button button--white">CV</a></li>
       <li><a href="" class="button button--pink">Contact me</a></li>
     </ul>
+    <!-- <div class="hero__thumb-svg">
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 500 500">
+    <rect width="100%" height="100%" fill="#F7E9F1" />
+    <g fill="#A974B1">
+      <circle cx="100" cy="100" r="50" />
+      <circle cx="200" cy="200" r="30" />
+      <circle cx="300" cy="300" r="20" />
+    </g>
+    <g fill="#C594C5">
+      <rect x="50" y="350" width="100" height="30" rx="15" />
+      <rect x="200" y="350" width="150" height="30" rx="15" />
+      <rect x="380" y="350" width="70" height="30" rx="15" />
+    </g>
+    <text x="50" y="200" font-size="80" font-family="Verdana" fill="#DAA8DC">
+      &lt;/&gt;
+    </text>
+    <text x="150" y="400" font-size="30" font-family="Verdana" fill="#DAA8DC">
+      console.log('Hello, World!');
+    </text>
+    <text x="280" y="250" font-size="40" font-family="Verdana" fill="#DAA8DC">
+      function foo() &#123; &#125;
+    </text>
+  </svg>
+    </div> -->
   </div>
 </section>
