update: update projects

--- a/src/partials/portfolio.html
+++ b/src/partials/portfolio.html
@@ -79,9 +79,11 @@
               nutrition database. In this project I was the Team Lead of a team
               of 9 developers. Also, as a Front-End developer, I was responsible
               for API, displaying the calorie norm and not recommended products,
-              markup of the Calculator page. <b>Technology stack:</b> React,
-              Redux Toolkit, HTML, SASS, JavaScript, Adaptive/Responsive design,
-              REST API, GIT.
+              markup of the Calculator page.
+            </p>
+            <p>
+              <b>Technology stack:</b> React, Redux Toolkit, HTML, SASS,
+              JavaScript, Adaptive/Responsive design, REST API, GIT.
             </p>
             <div class="portfolio__list--project-links">
               <a
@@ -100,12 +102,191 @@
               >
             </div>
           </li>
+          <li class="portfolio__list--project-list">
+            <p class="portfolio__list--project">Filmoteka</p>
+            <p>
+              A site for searching films. In this team project I was responsible
+              for loading popular movies to the main page, searching and loading
+              films by query, pagination on the main page and library.
+            </p>
+            <p>
+              <b>Technology stack:</b> HTML, SASS, JavaScript, Parcel,
+              Adaptive/Responsive design, REST API, GIT.
+            </p>
+
+            <div class="portfolio__list--project-links">
+              <a
+                href="https://aniyavolfman.github.io/filmoteka/"
+                target="_blank"
+                rel="noopener noreferrer nofollow"
+                class="portfolio__button button button--pink"
+                >See project</a
+              >
+              <a
+                href="https://github.com/aniyavolfman/filmoteka"
+                target="_blank"
+                rel="noopener noreferrer nofollow"
+                class="portfolio__button button button--white"
+                >See GitHub</a
+              >
+            </div>
+          </li>
+          <li class="portfolio__list--project-list">
+            <p class="portfolio__list--project">Ice Cream</p>
+            <p>
+              А site for an ice cream shop. Adapted to any device, starting with
+              a 320px screen width. In this team project I was responsible for
+              Products section (product catalog with adaptive/responsive design,
+              retina, modal window with detailed information and application
+              form).
+            </p>
+            <p>
+              <b>Technology stack:</b> Technology stack: HTML, SASS, JavaScript,
+              Parcel.
+            </p>
+            <div class="portfolio__list--project-links">
+              <a
+                href="https://aniyavolfman.github.io/team-project-scss/"
+                target="_blank"
+                rel="noopener noreferrer nofollow"
+                class="portfolio__button button button--pink"
+                >See project</a
+              >
+              <a
+                href="https://github.com/aniyavolfman/team-project-scss"
+                target="_blank"
+                rel="noopener noreferrer nofollow"
+                class="portfolio__button button button--white"
+                >See GitHub</a
+              >
+            </div>
+          </li>
         </ul>
         <h4 class="portfolio__list--title">Individual projects:</h4>
+        <ul>
+          <li class="portfolio__list--project-list">
+            <p class="portfolio__list--project">Phonebook</p>
+            <p>
+              Phonebook is an app in which you can store an unlimited number of
+              contacts. There is a check for contact duplication in this app.
+            </p>
+            <p>
+              <b>Technology stack:</b> React, Redux Toolkit, HTML, СSS,
+              JavaScript, Adaptive/Responsive design, REST API, GIT.
+            </p>
+            <div class="portfolio__list--project-links">
+              <a
+                href="https://aniyavolfman.github.io/goit-react-hw-08-phonebook/"
+                target="_blank"
+                rel="noopener noreferrer nofollow"
+                class="portfolio__button button button--pink"
+                >See project</a
+              >
+              <a
+                href="https://github.com/aniyavolfman/goit-react-hw-08-phonebook"
+                target="_blank"
+                rel="noopener noreferrer nofollow"
+                class="portfolio__button button button--white"
+                >See GitHub</a
+              >
+            </div>
+          </li>
+          <li class="portfolio__list--project-list">
+            <p class="portfolio__list--project">Search images</p>
+            <p>
+              A site for searching and loading images by query. With pagination.
+              With information about each image such as amount of likes, views,
+              comments etc. With the possibility of flipping slides in the
+              gallery.
+            </p>
+            <p>
+              <b>Technology stack:</b> HTML, CSS, JavaScript, Parcel, REST API,
+              GIT.SS, JavaScript, Adaptive/Responsive design, REST API, GIT.
+            </p>
+            <div class="portfolio__list--project-links">
+              <a
+                href="https://aniyavolfman.github.io/search-images/"
+                target="_blank"
+                rel="noopener noreferrer nofollow"
+                class="portfolio__button button button--pink"
+                >See project</a
+              >
+              <a
+                href="https://github.com/aniyavolfman/search-images"
+                target="_blank"
+                rel="noopener noreferrer nofollow"
+                class="portfolio__button button button--white"
+                >See GitHub</a
+              >
+            </div>
+          </li>
+          <li class="portfolio__list--project-list">
+            <p class="portfolio__list--project">Web Studio</p>
+            <p>
+              A site for a web studio in Kyiv. Adapted to any device, starting
+              with a 320px screen width. There are 3 pages with information
+              about WEB Studio, portfolio and contacts.
+            </p>
+            <p><b>Technology stack:</b> HTML, SASS, JavaScript.</p>
+            <div class="portfolio__list--project-links">
+              <a
+                href="https://aniyavolfman.github.io/goit-markup-hw-08/index.html"
+                target="_blank"
+                rel="noopener noreferrer nofollow"
+                class="portfolio__button button button--pink"
+                >See project</a
+              >
+              <a
+                href="https://github.com/aniyavolfman/goit-markup-hw-08"
+                target="_blank"
+                rel="noopener noreferrer nofollow"
+                class="portfolio__button button button--white"
+                >See GitHub</a
+              >
+            </div>
+          </li>
+        </ul>
       </li>
       <li>
         <h3 class="portfolio__list--title-main">Back-End</h3>
         <h4 class="portfolio__list--title">Individual projects:</h4>
+        <ul>
+          <li class="portfolio__list--project-list">
+            <p class="portfolio__list--project">Contact Management App</p>
+            <p>
+              This is a Node.js application for managing a list of contacts. It
+              uses the MongoDB database to store the contacts data and provides
+              RESTful API endpoints to perform CRUD operations. This app allows
+              users to create an account, verify their identity, and add a
+              profile picture. Once logged in, users can add, delete, and update
+              their contacts, including information such as name, phone number,
+              and email address. This application is built using the popular
+              Node.js web framework, Express, and uses MongoDB as its primary
+              database. Additionally, the app utilizes the Cross-Origin Resource
+              Sharing (CORS) middleware to enable secure communication between
+              the client and server. The app also incorporates Mongoose, an
+              Object Data Modeling (ODM) library, to provide an easy-to-use
+              interface for working with MongoDB data. Nodemailer is used for
+              sending email verification. Overall, this Node.js application
+              provides a simple, efficient, and secure way to manage contacts,
+              making it an excellent tool for personal or business use.
+            </p>
+            <p>
+              <b>Technology stack:</b> Technology stack: JavaScript, Node.js,
+              Express, MongoDB, CORS, Mongoose, REST API, GIT.
+            </p>
+
+            <div class="portfolio__list--project-links">
+              <a
+                href="https://github.com/aniyavolfman/nodejs-rest-api-contacts"
+                target="_blank"
+                rel="noopener noreferrer nofollow"
+                class="portfolio__button button button--white"
+                >See GitHub</a
+              >
+            </div>
+          </li>
+        </ul>
       </li>
     </ul>
   </div>
