--- a/src/sass/layouts/_portfolio.scss
+++ b/src/sass/layouts/_portfolio.scss
@@ -42,6 +42,7 @@
 .portfolio__list--project-list {
   display: flex;
   flex-direction: column;
+  margin-bottom: 20px;
 }
 
 .portfolio__list--project {
