update: update footer

--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,11 +1,7 @@
-<section class="hero">
-  <div class="hero__container container">
-    <p>Hello, I'm Anna</p>
-    <h1 class="hero__title">I'm Full-Stack Developer</h1>
-    <p class="hero_text">
-      I admire Java Script and like creating websites and applications
-    </p>
-    <ul class="hero__list--links">
+<footer class="footer">
+  <div class="footer_container main__container container">
+    <address>
+      <ul class="footer__list--links">
       <li>
         <a
           href="https://www.linkedin.com/in/volfmananna/"
@@ -70,10 +66,7 @@
         </a>
       </li>
     </ul>
-    <ul class="hero__links">
-      <li><a href="https://drive.google.com/file/d/1GUgIexvLlL9_-bziwE6M_NvoX0jSu4-5/view?usp=share_link" target="_blank"
-        rel="noopener noreferrer nofollow" class="button button--white">CV</a></li>
-      <li><a href="mailto:aniya_07@ukr.net" class="button button--pink">Contact me</a></li>
-    </ul>
+    </address>
+    <p class="footer__text">Copyright &copy;2023 Anna Volfman</p>
   </div>
-</section>
+</footer>
