--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -2,8 +2,9 @@
   <div class="header_container container">
     <nav>
       <ul class="header_list">
-        <li class="header_list--item"><a href="">CV</a></li>
-        <li class="header_list--item"><a href="">Contact me</a></li>
+        <li class="header_list--item"><a href="https://drive.google.com/file/d/1GUgIexvLlL9_-bziwE6M_NvoX0jSu4-5/view?usp=share_link" target="_blank"
+        rel="noopener noreferrer nofollow">CV</a></li>
+        <li class="header_list--item"><a href="mailto:aniya_07@ukr.net">Contact me</a></li>
       </ul>
     </nav>
   </div>
