--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,79 +1,114 @@
 <section class="hero">
   <div class="hero__container container">
-    <p>Hello, I'm Anna</p>
-    <h1 class="hero__title">I'm Full-Stack Developer</h1>
-    <p class="hero_text">
-      I admire Java Script and like creating websites and applications
-    </p>
-    <ul class="hero__list--links">
+    <div>
+      <p>Hello, I'm Anna</p>
+      <h1 class="hero__title">I'm Full-Stack Developer</h1>
+      <p class="hero_text">
+        I admire Java Script and like creating websites and applications
+      </p>
+      <ul class="hero__list--links">
+        <li>
+          <a
+            href="https://www.linkedin.com/in/volfmananna/"
+            aria-label="Linkedin"
+            target="_blank"
+            rel="noopener noreferrer nofollow"
+            class="link"
+            ><svg
+              width="22"
+              height="21"
+              viewBox="0 0 22 21"
+              fill="none"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <path
+                d="M4.92446 20.9995H0.363393V6.97921H4.92446V20.9995ZM2.64147 5.06671C1.18299 5.06671 0 3.91359 0 2.5214C1.04392e-08 1.85269 0.278297 1.21136 0.77367 0.738502C1.26904 0.265647 1.94091 0 2.64147 0C3.34204 0 4.0139 0.265647 4.50928 0.738502C5.00465 1.21136 5.28295 1.85269 5.28295 2.5214C5.28295 3.91359 4.09946 5.06671 2.64147 5.06671ZM21.9951 20.9995H17.4438V14.1745C17.4438 12.548 17.4095 10.462 15.0725 10.462C12.7011 10.462 12.3377 12.2292 12.3377 14.0573V20.9995H7.78152V6.97921H12.156V8.89171H12.2198C12.8287 7.79015 14.3162 6.62765 16.5354 6.62765C21.1514 6.62765 22 9.52921 22 13.298V20.9995H21.9951Z"
+                fill="url(#paint0_linear_2_212)"
+              />
+              <defs>
+                <linearGradient
+                  id="paint0_linear_2_212"
+                  x1="22"
+                  y1="-3.49992"
+                  x2="-8.392"
+                  y2="6.64008"
+                  gradientUnits="userSpaceOnUse"
+                >
+                  <stop stop-color="#F1B8D2" stop-opacity="0.74" />
+                  <stop offset="1" stop-color="#95BBE9" stop-opacity="0.79" />
+                </linearGradient>
+              </defs>
+            </svg>
+          </a>
+        </li>
+        <li>
+          <a
+            href="https://github.com/aniyavolfman"
+            aria-label="GitHub"
+            target="_blank"
+            rel="noopener noreferrer nofollow"
+            class="link"
+          >
+            <svg
+              width="34"
+              height="34"
+              viewBox="0 0 34 34"
+              fill="none"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <path
+                d="M17 7C11.5074 7 7 11.5074 7 17C7 21.687 10.2889 25.9447 14.6562 27V23.6916C14.2235 23.7863 13.8253 23.7891 13.3847 23.6592C12.7938 23.4848 12.3136 23.0912 11.9571 22.4909C11.7299 22.1076 11.3272 21.6919 10.9072 21.7224L10.8042 20.5551C11.7125 20.4773 12.4984 21.1086 12.9648 21.8923C13.172 22.2408 13.4105 22.4451 13.7166 22.5354C14.0125 22.6226 14.3302 22.5807 14.7003 22.45C14.7933 21.7089 15.1328 21.4315 15.3893 21.0408V21.0402C12.7846 20.6517 11.7466 19.2699 11.3346 18.1792C10.7886 16.731 11.0816 14.9218 12.047 13.7784C12.0658 13.7561 12.0996 13.6978 12.0865 13.6571C11.6439 12.32 12.1833 11.2139 12.2031 11.0965C12.714 11.2476 12.797 10.9445 14.4222 11.9319L14.7031 12.1007C14.8206 12.1707 14.7837 12.1308 14.9012 12.1219C15.5797 11.9376 16.295 11.8358 16.9998 11.8267C17.71 11.8358 18.4207 11.9376 19.1274 12.1294L19.2183 12.1385C19.2104 12.1373 19.243 12.1328 19.2978 12.1001C21.328 10.8704 21.2551 11.2723 21.7995 11.0953C21.8192 11.2128 22.3514 12.3369 21.9135 13.6571C21.8544 13.839 23.6736 15.5048 22.6653 18.1787C22.2533 19.2699 21.2154 20.6517 18.6107 21.0402V21.0408C18.9446 21.5497 19.3457 21.8204 19.3436 22.8702V27C23.7111 25.9447 26.9998 21.687 26.9998 17C27 11.5074 22.4926 7 17 7V7Z"
+                fill="#F1B8D2"
+              />
+            </svg>
+          </a>
+        </li>
+        <li>
+          <a
+            href="https://t.me/aniyavolfman"
+            aria-label="Telegram"
+            target="_blank"
+            rel="noopener noreferrer nofollow"
+            class="link"
+          >
+            <svg
+              width="34"
+              height="34"
+              viewBox="0 0 34 34"
+              fill="none"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <g clip-path="url(#clip0_105_10829)">
+                <path
+                  d="M13.6713 19.5238L13.3338 23.9538C13.8167 23.9538 14.0258 23.7602 14.2765 23.5278L16.5401 21.5088L21.2305 24.7146C22.0907 25.162 22.6968 24.9264 22.9289 23.976L26.0076 10.5116L26.0085 10.5108C26.2813 9.32401 25.5486 8.85991 24.7105 9.15106L6.61358 15.6175C5.3785 16.0649 5.3972 16.7075 6.40362 16.9987L11.0303 18.3418L21.7771 12.0658C22.2829 11.7532 22.7427 11.9261 22.3645 12.2387L13.6713 19.5238Z"
+                  fill="#F1B8D2"
+                />
+              </g>
+              <defs>
+                <clipPath id="clip0_105_10829">
+                  <rect width="34" height="34" fill="white" />
+                </clipPath>
+              </defs>
+            </svg>
+          </a>
+        </li>
+      </ul>
+    </div>
+    <ul class="hero__links">
       <li>
         <a
-          href="https://www.linkedin.com/in/volfmananna/"
-          aria-label="Linkedin"
+          href="https://drive.google.com/file/d/1GUgIexvLlL9_-bziwE6M_NvoX0jSu4-5/view?usp=share_link"
           target="_blank"
           rel="noopener noreferrer nofollow"
-          class="link"
-          ><svg
-            width="22"
-            height="21"
-            viewBox="0 0 22 21"
-            fill="none"
-            xmlns="http://www.w3.org/2000/svg"
-          >
-            <path
-              d="M4.92446 20.9995H0.363393V6.97921H4.92446V20.9995ZM2.64147 5.06671C1.18299 5.06671 0 3.91359 0 2.5214C1.04392e-08 1.85269 0.278297 1.21136 0.77367 0.738502C1.26904 0.265647 1.94091 0 2.64147 0C3.34204 0 4.0139 0.265647 4.50928 0.738502C5.00465 1.21136 5.28295 1.85269 5.28295 2.5214C5.28295 3.91359 4.09946 5.06671 2.64147 5.06671ZM21.9951 20.9995H17.4438V14.1745C17.4438 12.548 17.4095 10.462 15.0725 10.462C12.7011 10.462 12.3377 12.2292 12.3377 14.0573V20.9995H7.78152V6.97921H12.156V8.89171H12.2198C12.8287 7.79015 14.3162 6.62765 16.5354 6.62765C21.1514 6.62765 22 9.52921 22 13.298V20.9995H21.9951Z"
-              fill="url(#paint0_linear_2_212)"
-            />
-            <defs>
-              <linearGradient
-                id="paint0_linear_2_212"
-                x1="22"
-                y1="-3.49992"
-                x2="-8.392"
-                y2="6.64008"
-                gradientUnits="userSpaceOnUse"
-              >
-                <stop stop-color="#F1B8D2" stop-opacity="0.74" />
-                <stop offset="1" stop-color="#95BBE9" stop-opacity="0.79" />
-              </linearGradient>
-            </defs>
-          </svg>
-        </a>
+          class="button button--white"
+          >CV</a
+        >
       </li>
       <li>
-        <a href="https://github.com/aniyavolfman"
-          aria-label="GitHub"
-          target="_blank"
-          rel="noopener noreferrer nofollow"
-          class="link">
-          <svg width="34" height="34" viewBox="0 0 34 34" fill="none" xmlns="http://www.w3.org/2000/svg">
-          <path d="M17 7C11.5074 7 7 11.5074 7 17C7 21.687 10.2889 25.9447 14.6562 27V23.6916C14.2235 23.7863 13.8253 23.7891 13.3847 23.6592C12.7938 23.4848 12.3136 23.0912 11.9571 22.4909C11.7299 22.1076 11.3272 21.6919 10.9072 21.7224L10.8042 20.5551C11.7125 20.4773 12.4984 21.1086 12.9648 21.8923C13.172 22.2408 13.4105 22.4451 13.7166 22.5354C14.0125 22.6226 14.3302 22.5807 14.7003 22.45C14.7933 21.7089 15.1328 21.4315 15.3893 21.0408V21.0402C12.7846 20.6517 11.7466 19.2699 11.3346 18.1792C10.7886 16.731 11.0816 14.9218 12.047 13.7784C12.0658 13.7561 12.0996 13.6978 12.0865 13.6571C11.6439 12.32 12.1833 11.2139 12.2031 11.0965C12.714 11.2476 12.797 10.9445 14.4222 11.9319L14.7031 12.1007C14.8206 12.1707 14.7837 12.1308 14.9012 12.1219C15.5797 11.9376 16.295 11.8358 16.9998 11.8267C17.71 11.8358 18.4207 11.9376 19.1274 12.1294L19.2183 12.1385C19.2104 12.1373 19.243 12.1328 19.2978 12.1001C21.328 10.8704 21.2551 11.2723 21.7995 11.0953C21.8192 11.2128 22.3514 12.3369 21.9135 13.6571C21.8544 13.839 23.6736 15.5048 22.6653 18.1787C22.2533 19.2699 21.2154 20.6517 18.6107 21.0402V21.0408C18.9446 21.5497 19.3457 21.8204 19.3436 22.8702V27C23.7111 25.9447 26.9998 21.687 26.9998 17C27 11.5074 22.4926 7 17 7V7Z" fill="#F1B8D2"/>
-          </svg>
-        </a>
+        <a href="mailto:aniya_07@ukr.net" class="button button--pink"
+          >Contact me</a
+        >
       </li>
-      <li
-      ><a href="https://t.me/aniyavolfman" 
-        aria-label="Telegram"
-        target="_blank"
-        rel="noopener noreferrer nofollow"
-        class="link">
-        <svg width="34" height="34" viewBox="0 0 34 34" fill="none" xmlns="http://www.w3.org/2000/svg">
-        <g clip-path="url(#clip0_105_10829)">
-        <path d="M13.6713 19.5238L13.3338 23.9538C13.8167 23.9538 14.0258 23.7602 14.2765 23.5278L16.5401 21.5088L21.2305 24.7146C22.0907 25.162 22.6968 24.9264 22.9289 23.976L26.0076 10.5116L26.0085 10.5108C26.2813 9.32401 25.5486 8.85991 24.7105 9.15106L6.61358 15.6175C5.3785 16.0649 5.3972 16.7075 6.40362 16.9987L11.0303 18.3418L21.7771 12.0658C22.2829 11.7532 22.7427 11.9261 22.3645 12.2387L13.6713 19.5238Z" fill="#F1B8D2"/>
-        </g>
-        <defs>
-        <clipPath id="clip0_105_10829">
-        <rect width="34" height="34" fill="white"/>
-        </clipPath>
-        </defs>
-        </svg>
-        </a>
-      </li>
-    </ul>
-    <ul class="hero__links">
-      <li><a href="https://drive.google.com/file/d/1GUgIexvLlL9_-bziwE6M_NvoX0jSu4-5/view?usp=share_link" target="_blank"
-        rel="noopener noreferrer nofollow" class="button button--white">CV</a></li>
-      <li><a href="mailto:aniya_07@ukr.net" class="button button--pink">Contact me</a></li>
     </ul>
   </div>
 </section>
