--- a/src/sass/layouts/_hero.scss
+++ b/src/sass/layouts/_hero.scss
@@ -5,16 +5,45 @@
 .hero__container {
   background-image: url(../images/hero.svg);
   background-repeat: no-repeat;
-  background-position: right 100px center;
+  background-position: center bottom 100px;
   background-size: contain;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  min-height: 530px;
+  @include tablet {
+    justify-content: center;
+    min-height: 200px;
+    background-position: right center;
+  }
+  @include desktop {
+    background-position: right 100px center;
+  }
 }
 
 .hero_text {
-  margin-bottom: 20px;
+  margin-bottom: 0;
+  font-size: 18px;
+  @include tablet {
+    max-width: 300px;
+  }
+  @include desktop {
+    font-size: 20px;
+    margin-bottom: 20px;
+    max-width: 600px;
+  }
 }
 
 .hero__title {
   color: $title_hero;
+  text-align: center;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  @include tablet {
+    text-align: start;
+    margin-top: 0;
+    margin-bottom: 0;
+  }
 }
 
 .link {
@@ -39,7 +68,14 @@
 
 .hero__links {
   display: flex;
-  gap: 20px;
+  gap: 10px;
+  flex-direction: column;
+  align-self: center;
+  @include tablet {
+    flex-direction: row;
+    gap: 20px;
+    align-self: start;
+  }
 }
 
 .hero__thumb-svg {
