--- a/src/sass/layouts/_portfolio.scss
+++ b/src/sass/layouts/_portfolio.scss
@@ -21,6 +21,10 @@
   width: 100%;
   display: flex;
   gap: 20px;
+  flex-direction: column;
+  @include desktop {
+    flex-direction: row;
+  }
   & li {
     padding: 20px;
     background: $secondary;
@@ -57,6 +61,15 @@
   width: 100%;
   justify-content: space-around;
   margin-top: 10px;
+  flex-direction: column;
+  gap: 10px;
+  align-items: center;
+  @include tablet {
+    flex-direction: row;
+  }
+  @include desktop {
+    gap: 0;
+  }
 }
 
 .portfolio__button{
