--- a/src/partials/portfolio.html
+++ b/src/partials/portfolio.html
@@ -1,4 +1,5 @@
-<section class="portfolio">
+<section class="portfolio" id="up">
+  <div><a href="#up" class="anchor link">Up!</a></div>
   <div class="portfolio__container container">
     <div class="portfolio__wrapper">
       <svg
@@ -247,7 +248,7 @@
           </li>
         </ul>
       </li>
-      <li>
+      <li class="portfolio__list--back">
         <h3 class="portfolio__list--title-main">Back-End</h3>
         <h4 class="portfolio__list--title">Individual projects:</h4>
         <ul>
