update: update hero

--- a/src/partials/portfolio.html
+++ b/src/partials/portfolio.html
@@ -1,4 +1,4 @@
-<section class="portfolio" id="up">
+<section class="portfolio">
   <div><a href="#up" class="anchor link">Up!</a></div>
   <div class="portfolio__container container">
     <div class="portfolio__wrapper">
