--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,4 +1,4 @@
-<header class="header">
+<header class="header"  id="up">
   <div class="header_container container">
     <nav>
       <ul class="header_list">
