--- a/src/sass/layouts/_hero.scss
+++ b/src/sass/layouts/_hero.scss
@@ -5,7 +5,7 @@
 .hero__container {
   background-image: url(../images/hero.svg);
   background-repeat: no-repeat;
-  background-position: right bottom 100px;
+  background-position: 100% 70%;
   background-size: contain;
   display: flex;
   flex-direction: column;
