--- a/src/sass/layouts/_portfolio.scss
+++ b/src/sass/layouts/_portfolio.scss
@@ -35,12 +35,12 @@
 }
 
 .portfolio__list--title-main {
-   text-align: center;
+  text-align: center;
 }
 
 .portfolio__list--title {
-    margin-bottom: 20px;
-    margin-top: 20px;
+  margin-bottom: 20px;
+  margin-top: 20px;
 }
 
 .portfolio__list--project-list {
@@ -72,8 +72,8 @@
   }
 }
 
-.portfolio__button{
-    max-width: 100px;
+.portfolio__button {
+  max-width: 100px;
 }
 
 .anchor {
@@ -102,7 +102,8 @@
     transition-duration: 250ms;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   }
-  .anchor:hover, .anchor:focus {
+  .anchor:hover,
+  .anchor:focus {
     background-color: #f1b8d2;
     border: 1px solid #fff;
   }
@@ -111,5 +112,5 @@
 li.portfolio__list--back {
   background-image: url(../images/Group1.svg);
   background-repeat: no-repeat;
-  background-position: center bottom 20px;
+  background-position: 50% 98%;
 }
