update: update portfolio

--- a/src/partials/portfolio.html
+++ b/src/partials/portfolio.html
@@ -71,6 +71,34 @@
     <ul class="portfolio__list">
       <li>
         <h3 class="portfolio__list--title-main">Front-End</h3>
+        <h4 class="portfolio__list--title">Volunteering:</h4>
+        <ul>
+          <li class="portfolio__list--project-list">
+            <p class="portfolio__list--project">Go-volunteer</p>
+            <p>
+              I developed a responsive and adaptive site for volunteers.
+              Collaborated closely with developers, designers, QA and PM. We
+              used SASS, Parcel, Git, WordPress, BEM and SCRUM methodologies.
+              The goal of this project was to help Ukrainian volunteers and
+              non-profit organizations to fill in their financial documentation
+              correctly and guide them on conducting their activity following
+              Ukrainian law.
+            </p>
+            <p>
+              <b>Technology stack:</b> JavaScript, HTML, CSS, CSS Grid Layout,
+              Adaptive/Responsive design, SASS, Parcel, WordPress, GIT.
+            </p>
+            <div class="portfolio__list--project-links">
+              <a
+                href="https://www.go-volonteer.in.ua/"
+                target="_blank"
+                rel="noopener noreferrer nofollow"
+                class="portfolio__button button button--pink"
+                >See project</a
+              >
+            </div>
+          </li>
+        </ul>
         <h4 class="portfolio__list--title">Team projects:</h4>
         <ul>
           <li class="portfolio__list--project-list">
