update: update project

--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,4 +1,4 @@
-<section class="hero">
+<section class="hero background">
   <div class="hero__container container">
     <div>
       <p>Hello, I'm Anna</p>
