--- a/src/partials/portfolio.html
+++ b/src/partials/portfolio.html
@@ -277,6 +277,47 @@
         </ul>
       </li>
       <li class="portfolio__list--back">
+        <h3 class="portfolio__list--title-main">Full-Stack</h3>
+        <h4 class="portfolio__list--title">Individual projects:</h4>
+        <ul>
+          <li class="portfolio__list--project-list">
+            <p class="portfolio__list--project">Promptopia</p>
+            <p>
+              Promptopia is an open-source AI prompting full-stack tool for the
+              modern world. It provides users with the ability to discover,
+              create, and share creative prompts to inspire their writing,
+              brainstorming sessions, and creative projects. Uses tailwindcss
+              for styling. Contains Authentication with Google. Once logged in,
+              users can create new prompts, edit existing ones, or delete
+              prompts. Each user has their own profile page where they can
+              showcase their created prompts. The main page of Promptopia allows
+              users to search for prompts using keywords, tags, or usernames. A
+              handy button allows users to copy the text of a prompt with a
+              single click.
+            </p>
+            <p>
+              <b>Technology stack:</b> JavaScript, Next.js 13, Node.js, React,
+              MongoDB, CORS, Mongoose, Tailwindcss, REST API, GIT.
+            </p>
+
+            <div class="portfolio__list--project-links">
+              <a
+                href="https://promptopia-eight-sigma.vercel.app/"
+                target="_blank"
+                rel="noopener noreferrer nofollow"
+                class="portfolio__button button button--pink"
+                >See project</a
+              >
+              <a
+                href="https://github.com/aniyavolfman/promptopia"
+                target="_blank"
+                rel="noopener noreferrer nofollow"
+                class="portfolio__button button button--white"
+                >See GitHub</a
+              >
+            </div>
+          </li>
+        </ul>
         <h3 class="portfolio__list--title-main">Back-End</h3>
         <h4 class="portfolio__list--title">Individual projects:</h4>
         <ul>
@@ -301,8 +342,8 @@
               making it an excellent tool for personal or business use.
             </p>
             <p>
-              <b>Technology stack:</b> Technology stack: JavaScript, Node.js,
-              Express, MongoDB, CORS, Mongoose, REST API, GIT.
+              <b>Technology stack:</b> JavaScript, Node.js, Express, MongoDB,
+              CORS, Mongoose, REST API, GIT.
             </p>
 
             <div class="portfolio__list--project-links">
@@ -319,4 +360,5 @@
       </li>
     </ul>
   </div>
+<div class="moving-square"></div>
 </section>
