--- a/src/sass/base/_common.scss
+++ b/src/sass/base/_common.scss
@@ -18,6 +18,7 @@ body {
     background: $secondary;
     box-shadow: 4px 4px 100px 4px rgba(0, 0, 0, 0.25);
     border-radius: 30px;
+    z-index: 1;
   }
 }
 
