--- a/src/partials/portfolio.html
+++ b/src/partials/portfolio.html
@@ -88,6 +88,7 @@
               <b>Technology stack:</b> JavaScript, HTML, CSS, CSS Grid Layout,
               Adaptive/Responsive design, SASS, Parcel, WordPress, GIT.
             </p>
+            <img src="./images/volunteer.jpg" alt="go-volunteer">
             <div class="portfolio__list--project-links">
               <a
                 href="https://www.go-volonteer.in.ua/"
