--- a/src/partials/portfolio.html
+++ b/src/partials/portfolio.html
@@ -88,7 +88,7 @@
               <b>Technology stack:</b> JavaScript, HTML, CSS, CSS Grid Layout,
               Adaptive/Responsive design, SASS, Parcel, WordPress, GIT.
             </p>
-            <img src="./images/volunteer.jpg" alt="go-volunteer">
+            <img src="./images/volunteer.jpg" alt="go-volunteer" />
             <div class="portfolio__list--project-links">
               <a
                 href="https://www.go-volonteer.in.ua/"
@@ -300,7 +300,7 @@
               <b>Technology stack:</b> JavaScript, Next.js 13, Node.js, React,
               MongoDB, CORS, Mongoose, Tailwindcss, REST API, GIT.
             </p>
-
+            <img src="./images/promptopia.jpg" alt="promptopia" />
             <div class="portfolio__list--project-links">
               <a
                 href="https://promptopia-eight-sigma.vercel.app/"
@@ -361,5 +361,5 @@
       </li>
     </ul>
   </div>
-<div class="moving-square"></div>
+  <div class="moving-square"></div>
 </section>
