--- a/src/partials/portfolio.html
+++ b/src/partials/portfolio.html
@@ -100,6 +100,94 @@
             </div>
           </li>
         </ul>
+
+        <h4 class="portfolio__list--title">Individual projects:</h4>
+        <ul>
+          <li class="portfolio__list--project-list">
+            <p class="portfolio__list--project">Phonebook</p>
+            <p>
+              Phonebook is an app in which you can store an unlimited number of
+              contacts. There is a check for contact duplication in this app.
+            </p>
+            <p>
+              <b>Technology stack:</b> React, Redux Toolkit, HTML, СSS,
+              JavaScript, Adaptive/Responsive design, REST API, GIT.
+            </p>
+            <img src="./images/phone.jpg" alt="phone" />
+            <div class="portfolio__list--project-links">
+              <a
+                href="https://aniyavolfman.github.io/goit-react-hw-08-phonebook/"
+                target="_blank"
+                rel="noopener noreferrer nofollow"
+                class="portfolio__button button button--pink"
+                >See project</a
+              >
+              <a
+                href="https://github.com/aniyavolfman/goit-react-hw-08-phonebook"
+                target="_blank"
+                rel="noopener noreferrer nofollow"
+                class="portfolio__button button button--white"
+                >See GitHub</a
+              >
+            </div>
+          </li>
+          <li class="portfolio__list--project-list">
+            <p class="portfolio__list--project">Search images</p>
+            <p>
+              A site for searching and loading images by query. With pagination.
+              With information about each image such as amount of likes, views,
+              comments etc. With the possibility of flipping slides in the
+              gallery.
+            </p>
+            <p>
+              <b>Technology stack:</b> HTML, CSS, JavaScript, Parcel, REST API,
+              GIT.SS, JavaScript, Adaptive/Responsive design, REST API, GIT.
+            </p>
+            <img src="./images/image.jpg" alt="image" />
+            <div class="portfolio__list--project-links">
+              <a
+                href="https://aniyavolfman.github.io/search-images/"
+                target="_blank"
+                rel="noopener noreferrer nofollow"
+                class="portfolio__button button button--pink"
+                >See project</a
+              >
+              <a
+                href="https://github.com/aniyavolfman/search-images"
+                target="_blank"
+                rel="noopener noreferrer nofollow"
+                class="portfolio__button button button--white"
+                >See GitHub</a
+              >
+            </div>
+          </li>
+          <li class="portfolio__list--project-list">
+            <p class="portfolio__list--project">Web Studio</p>
+            <p>
+              A site for a web studio in Kyiv. Adapted to any device, starting
+              with a 320px screen width. There are 3 pages with information
+              about WEB Studio, portfolio and contacts.
+            </p>
+            <p><b>Technology stack:</b> HTML, SASS, JavaScript.</p>
+            <img src="./images/studio.jpg" alt="studio" />
+            <div class="portfolio__list--project-links">
+              <a
+                href="https://aniyavolfman.github.io/goit-markup-hw-08/index.html"
+                target="_blank"
+                rel="noopener noreferrer nofollow"
+                class="portfolio__button button button--pink"
+                >See project</a
+              >
+              <a
+                href="https://github.com/aniyavolfman/goit-markup-hw-08"
+                target="_blank"
+                rel="noopener noreferrer nofollow"
+                class="portfolio__button button button--white"
+                >See GitHub</a
+              >
+            </div>
+          </li>
+        </ul>
         <h4 class="portfolio__list--title">Team projects:</h4>
         <ul>
           <li class="portfolio__list--project-list">
@@ -115,6 +203,7 @@
               <b>Technology stack:</b> React, Redux Toolkit, HTML, SASS,
               JavaScript, Adaptive/Responsive design, REST API, GIT.
             </p>
+            <img src="./images/slimmom.jpg" alt="slimmom" />
             <div class="portfolio__list--project-links">
               <a
                 href="https://aniyavolfman.github.io/health-app-project/"
@@ -143,7 +232,7 @@
               <b>Technology stack:</b> HTML, SASS, JavaScript, Parcel,
               Adaptive/Responsive design, REST API, GIT.
             </p>
-
+            <img src="./images/cinema.jpg" alt="cinema" />
             <div class="portfolio__list--project-links">
               <a
                 href="https://aniyavolfman.github.io/filmoteka/"
@@ -174,6 +263,7 @@
               <b>Technology stack:</b> Technology stack: HTML, SASS, JavaScript,
               Parcel.
             </p>
+            <img src="./images/ice.jpg" alt="ice" />
             <div class="portfolio__list--project-links">
               <a
                 href="https://aniyavolfman.github.io/team-project-scss/"
@@ -184,90 +274,6 @@
               >
               <a
                 href="https://github.com/aniyavolfman/team-project-scss"
-                target="_blank"
-                rel="noopener noreferrer nofollow"
-                class="portfolio__button button button--white"
-                >See GitHub</a
-              >
-            </div>
-          </li>
-        </ul>
-        <h4 class="portfolio__list--title">Individual projects:</h4>
-        <ul>
-          <li class="portfolio__list--project-list">
-            <p class="portfolio__list--project">Phonebook</p>
-            <p>
-              Phonebook is an app in which you can store an unlimited number of
-              contacts. There is a check for contact duplication in this app.
-            </p>
-            <p>
-              <b>Technology stack:</b> React, Redux Toolkit, HTML, СSS,
-              JavaScript, Adaptive/Responsive design, REST API, GIT.
-            </p>
-            <div class="portfolio__list--project-links">
-              <a
-                href="https://aniyavolfman.github.io/goit-react-hw-08-phonebook/"
-                target="_blank"
-                rel="noopener noreferrer nofollow"
-                class="portfolio__button button button--pink"
-                >See project</a
-              >
-              <a
-                href="https://github.com/aniyavolfman/goit-react-hw-08-phonebook"
-                target="_blank"
-                rel="noopener noreferrer nofollow"
-                class="portfolio__button button button--white"
-                >See GitHub</a
-              >
-            </div>
-          </li>
-          <li class="portfolio__list--project-list">
-            <p class="portfolio__list--project">Search images</p>
-            <p>
-              A site for searching and loading images by query. With pagination.
-              With information about each image such as amount of likes, views,
-              comments etc. With the possibility of flipping slides in the
-              gallery.
-            </p>
-            <p>
-              <b>Technology stack:</b> HTML, CSS, JavaScript, Parcel, REST API,
-              GIT.SS, JavaScript, Adaptive/Responsive design, REST API, GIT.
-            </p>
-            <div class="portfolio__list--project-links">
-              <a
-                href="https://aniyavolfman.github.io/search-images/"
-                target="_blank"
-                rel="noopener noreferrer nofollow"
-                class="portfolio__button button button--pink"
-                >See project</a
-              >
-              <a
-                href="https://github.com/aniyavolfman/search-images"
-                target="_blank"
-                rel="noopener noreferrer nofollow"
-                class="portfolio__button button button--white"
-                >See GitHub</a
-              >
-            </div>
-          </li>
-          <li class="portfolio__list--project-list">
-            <p class="portfolio__list--project">Web Studio</p>
-            <p>
-              A site for a web studio in Kyiv. Adapted to any device, starting
-              with a 320px screen width. There are 3 pages with information
-              about WEB Studio, portfolio and contacts.
-            </p>
-            <p><b>Technology stack:</b> HTML, SASS, JavaScript.</p>
-            <div class="portfolio__list--project-links">
-              <a
-                href="https://aniyavolfman.github.io/goit-markup-hw-08/index.html"
-                target="_blank"
-                rel="noopener noreferrer nofollow"
-                class="portfolio__button button button--pink"
-                >See project</a
-              >
-              <a
-                href="https://github.com/aniyavolfman/goit-markup-hw-08"
                 target="_blank"
                 rel="noopener noreferrer nofollow"
                 class="portfolio__button button button--white"
