--- a/src/sass/layouts/_portfolio.scss
+++ b/src/sass/layouts/_portfolio.scss
@@ -143,14 +143,19 @@ li.portfolio__list--back {
 }
 
 .moving-square {
-  z-index: 0.5;
-  width: 150px;
-  height: 150px;
-  background-color: transparent;
-  position: absolute;
-  animation: moveSquare 40s infinite;
-  border: 4px solid #f1b8d2;
-  border-radius: 20px;
+  display: none;
+
+  @include desktop {
+    display: block;
+    z-index: 0.5;
+    width: 150px;
+    height: 150px;
+    background-color: transparent;
+    position: absolute;
+    animation: moveSquare 40s infinite;
+    border: 4px solid #f1b8d2;
+    border-radius: 20px;
+  }
 }
 
 @include desktop {
