--- a/src/partials/portfolio.html
+++ b/src/partials/portfolio.html
@@ -77,6 +77,9 @@
             <p class="portfolio__list--project">Go-volunteer</p>
             <p class="intro">
               I developed a responsive and adaptive site for volunteers.
+              <span id="show-more" onclick="toggleText()" class="more-button">
+                Read more
+              </span>
             </p>
             <p class="more-text">
               Collaborated closely with developers, designers, QA and PM. We
@@ -86,9 +89,7 @@
               correctly and guide them on conducting their activity following
               Ukrainian law.
             </p>
-            <button id="show-more" onclick="toggleText()" type="button" class="more-button">
-              Read more
-            </button>
+
             <p>
               <b>Technology stack:</b> JavaScript, HTML, CSS, CSS Grid Layout,
               Adaptive/Responsive design, SASS, Parcel, WordPress, GIT.
@@ -294,18 +295,25 @@
         <ul>
           <li class="portfolio__list--project-list">
             <p class="portfolio__list--project">Promptopia</p>
-            <p>
+
+            <p class="intro">
               Promptopia is an open-source AI prompting full-stack tool for the
               modern world. It provides users with the ability to discover,
               create, and share creative prompts to inspire their writing,
               brainstorming sessions, and creative projects. Uses tailwindcss
-              for styling. Contains Authentication with Google. Once logged in,
-              users can create new prompts, edit existing ones, or delete
-              prompts. Each user has their own profile page where they can
-              showcase their created prompts. The main page of Promptopia allows
-              users to search for prompts using keywords, tags, or usernames. A
-              handy button allows users to copy the text of a prompt with a
-              single click.
+              for styling.
+              <span id="show-more2" onclick="toggleText2()" class="more-button">
+                Read more
+              </span>
+            </p>
+            <p class="more-text2">
+              Contains Authentication with Google. Once logged in, users can
+              create new prompts, edit existing ones, or delete prompts. Each
+              user has their own profile page where they can showcase their
+              created prompts. The main page of Promptopia allows users to
+              search for prompts using keywords, tags, or usernames. A handy
+              button allows users to copy the text of a prompt with a single
+              click.
             </p>
             <p>
               <b>Technology stack:</b> JavaScript, Next.js 13, Node.js, React,
@@ -335,23 +343,29 @@
         <ul>
           <li class="portfolio__list--project-list">
             <p class="portfolio__list--project">Contact Management App</p>
-            <p>
+            <p class="intro">
               This is a Node.js application for managing a list of contacts. It
               uses the MongoDB database to store the contacts data and provides
-              RESTful API endpoints to perform CRUD operations. This app allows
-              users to create an account, verify their identity, and add a
-              profile picture. Once logged in, users can add, delete, and update
-              their contacts, including information such as name, phone number,
-              and email address. This application is built using the popular
-              Node.js web framework, Express, and uses MongoDB as its primary
-              database. Additionally, the app utilizes the Cross-Origin Resource
-              Sharing (CORS) middleware to enable secure communication between
-              the client and server. The app also incorporates Mongoose, an
-              Object Data Modeling (ODM) library, to provide an easy-to-use
-              interface for working with MongoDB data. Nodemailer is used for
-              sending email verification. Overall, this Node.js application
-              provides a simple, efficient, and secure way to manage contacts,
-              making it an excellent tool for personal or business use.
+              RESTful API endpoints to perform CRUD operations.
+              <span id="show-more3" onclick="toggleText3()" class="more-button">
+                Read more
+              </span>
+            </p>
+            <p class="more-text3">
+              This app allows users to create an account, verify their identity,
+              and add a profile picture. Once logged in, users can add, delete,
+              and update their contacts, including information such as name,
+              phone number, and email address. This application is built using
+              the popular Node.js web framework, Express, and uses MongoDB as
+              its primary database. Additionally, the app utilizes the
+              Cross-Origin Resource Sharing (CORS) middleware to enable secure
+              communication between the client and server. The app also
+              incorporates Mongoose, an Object Data Modeling (ODM) library, to
+              provide an easy-to-use interface for working with MongoDB data.
+              Nodemailer is used for sending email verification. Overall, this
+              Node.js application provides a simple, efficient, and secure way
+              to manage contacts, making it an excellent tool for personal or
+              business use.
             </p>
             <p>
               <b>Technology stack:</b> JavaScript, Node.js, Express, MongoDB,
@@ -375,8 +389,8 @@
   <div class="moving-square"></div>
   <script>
     function toggleText() {
-      var moreText = document.querySelector('.more-text');
-      var buttonText = document.querySelector('#show-more');
+      const moreText = document.querySelector('.more-text');
+      const buttonText = document.querySelector('#show-more');
 
       if (moreText.style.display === 'none' || moreText.style.display === '') {
         moreText.style.display = 'block';
@@ -384,6 +398,38 @@
       } else {
         moreText.style.display = 'none';
         buttonText.innerText = 'Read more';
+      }
+    }
+
+    function toggleText2() {
+      const moreText2 = document.querySelector('.more-text2');
+      const buttonText2 = document.querySelector('#show-more2');
+
+      if (
+        moreText2.style.display === 'none' ||
+        moreText2.style.display === ''
+      ) {
+        moreText2.style.display = 'block';
+        buttonText2.innerText = 'Read less';
+      } else {
+        moreText2.style.display = 'none';
+        buttonText2.innerText = 'Read more';
+      }
+    }
+
+    function toggleText3() {
+      const moreText3 = document.querySelector('.more-text3');
+      const buttonText3 = document.querySelector('#show-more3');
+
+      if (
+        moreText3.style.display === 'none' ||
+        moreText3.style.display === ''
+      ) {
+        moreText3.style.display = 'block';
+        buttonText3.innerText = 'Read less';
+      } else {
+        moreText3.style.display = 'none';
+        buttonText3.innerText = 'Read more';
       }
     }
   </script>
