--- a/src/sass/layouts/_portfolio.scss
+++ b/src/sass/layouts/_portfolio.scss
@@ -187,16 +187,18 @@ li.portfolio__list--back {
   display: none;
 }
 
+.more-text2 {
+  display: none;
+}
+
+.more-text3 {
+  display: none;
+}
+
 .more-button {
-  border: 2px solid $input_border_active;
-  border-radius: 10px;
   color: $input_border_active;
-  padding: 2px;
-  width: 100px;
-  font-size: 15px;
 
   &:hover {
-    border: 2px solid #F1B8D2;
-    color: #F1B8D2;
+    color: #f1b8d2;
   }
 }
