--- a/src/partials/portfolio.html
+++ b/src/partials/portfolio.html
@@ -291,6 +291,35 @@
       </li>
       <li class="portfolio__list--back">
         <h3 class="portfolio__list--title-main">Full-Stack</h3>
+        <h4 class="portfolio__list--title">Commercial projects:</h4>
+        <ul>
+          <li class="portfolio__list--project-list">
+            <p class="portfolio__list--project">Berezovska portraits</p>
+            <p class="intro">
+              A website for an artist made with Next.js 13 and Strapi. It allows
+              the administrator to edit content (including paintings in the
+              gallery, text, contact information, links to social networks,
+              etc.), and send forms from clients by e-mail. Includes light and
+              dark themes, and Ukrainian and English localizations. It is
+              optimized to work on different devices, browsers, IOS and Android.
+            </p>
+            <p>
+              <b>Technology stack:</b> JavaScript, SCSS, Next.js 13, Node.js,
+              React, Strapi, REST API, GIT, Cross-browser layout,
+              Adaptive/Responsive, Localisation, Switch of the theme.
+            </p>
+            <img src="./images/berezovska.png" alt="berezovska" />
+            <div class="portfolio__list--project-links">
+              <a
+                href="https://drive.google.com/file/d/1J3dA9HnsjY-d2sdWtvsHuMF5fbMrEp9e/view?usp=sharing"
+                target="_blank"
+                rel="noopener noreferrer nofollow"
+                class="portfolio__button button button--pink"
+                >See project</a
+              >
+            </div>
+          </li>
+        </ul>
         <h4 class="portfolio__list--title">Individual projects:</h4>
         <ul>
           <li class="portfolio__list--project-list">
