add commercial products

--- a/src/partials/portfolio.html
+++ b/src/partials/portfolio.html
@@ -306,7 +306,7 @@
             <p>
               <b>Technology stack:</b> JavaScript, SCSS, Next.js 13, Node.js,
               React, Strapi, REST API, GIT, Cross-browser layout,
-              Adaptive/Responsive, Localisation, Switch of the theme.
+              Adaptive/Responsive, Localization, Switch of the theme.
             </p>
             <img src="./images/berezovska.png" alt="berezovska" />
             <div class="portfolio__list--project-links">
