--- a/src/sass/utils/_variables.scss
+++ b/src/sass/utils/_variables.scss
@@ -1,5 +1,8 @@
 // colors
 $primary: #000000;
+$primary_black: white;
+$bg: white;
+$bg_black: rgb(68, 67, 67);
 $title_hero: rgba(0, 0, 0, 0.6);
 $secondary: #ffffff;
 $button: #F1B8D2;
