--- a/src/sass/layouts/_footer.scss
+++ b/src/sass/layouts/_footer.scss
@@ -6,6 +6,11 @@
     align-items: center;
     justify-content: space-around;
     flex-wrap: wrap;
+    background-color: $bg;
+  }
+
+  & > .footer_container.dark-mode {
+    background-color: $bg_black;
   }
 }
 
