--- a/src/partials/portfolio.html
+++ b/src/partials/portfolio.html
@@ -3,10 +3,21 @@
   <div class="portfolio__container container">
     <div class="portfolio__wrapper">
       <h2 class="portfolio__title">My projects:</h2>
+      <ul>
+        <li>
+          <a href="#front"><p>Front-End</p></a>
+        </li>
+        <li>
+          <a href="#full"><p>Full-Stack</p></a>
+        </li>
+        <li>
+          <a href="#back"><p>Back-End</p></a>
+        </li>
+      </ul>
     </div>
     <ul class="portfolio__list">
       <li>
-        <h3 class="portfolio__list--title-main">Front-End</h3>
+        <h3 class="portfolio__list--title-main" id="front">Front-End</h3>
         <h4 class="portfolio__list--title">Volunteering:</h4>
         <ul>
           <li class="portfolio__list--project-list">
@@ -226,7 +237,7 @@
         </ul>
       </li>
       <li class="portfolio__list--back">
-        <h3 class="portfolio__list--title-main">Full-Stack</h3>
+        <h3 class="portfolio__list--title-main" id="full">Full-Stack</h3>
         <h4 class="portfolio__list--title">Commercial projects:</h4>
         <ul>
           <li class="portfolio__list--project-list">
@@ -303,7 +314,7 @@
             </div>
           </li>
         </ul>
-        <h3 class="portfolio__list--title-main">Back-End</h3>
+        <h3 class="portfolio__list--title-main" id="back">Back-End</h3>
         <h4 class="portfolio__list--title">Individual projects:</h4>
         <ul>
           <li class="portfolio__list--project-list">
