--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -3,7 +3,7 @@
     <nav>
       <ul class="header_list">
         <li class="header_list--item">
-          <div class="theme-switch" onclick="toggleTheme()" id="themeToggle">Light mode</div>
+          <div class="theme-switch" onclick="toggleTheme()" id="themeToggle">Bright mode</div>
         </li>
         <li class="header_list--item">
           <a
